final prisma fix for railway
