# src/routes/routes.ts
@@ -166,11 +166,12 @@ const models: TsoaRoute.Models = {
             "customerPhone": {"dataType":"string","required":true},
             "customerEmail": {"dataType":"string"},
             "serviceCategory": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["E_GOVERNMENT"]},{"dataType":"enum","enums":["APPLICATIONS_DOCS"]},{"dataType":"enum","enums":["CREATIVE_MEDIA"]},{"dataType":"enum","enums":["WEB_DIGITAL"]},{"dataType":"enum","enums":["LEGAL_OFFICIAL"]}],"required":true},
-            "service": {"dataType":"string","required":true},
+            "service": {"dataType":"string"},
             "description": {"dataType":"string","required":true},
             "documentUrl": {"dataType":"string"},
             "preferredDate": {"dataType":"string"},
-            "location": {"dataType":"string","required":true},
+            "location": {"dataType":"string"},
+            "taskerId": {"dataType":"double"},
         },
         "additionalProperties": false,
     },
@@ -183,11 +184,11 @@ const models: TsoaRoute.Models = {
             "customerName": {"dataType":"string","required":true},
             "customerPhone": {"dataType":"string","required":true},
             "serviceCategory": {"dataType":"string","required":true},
-            "service": {"dataType":"string","required":true},
+            "service": {"dataType":"union","subSchemas":[{"dataType":"string"},{"dataType":"enum","enums":[null]}],"required":true},
             "description": {"dataType":"string","required":true},
             "documentUrl": {"dataType":"union","subSchemas":[{"dataType":"string"},{"dataType":"enum","enums":[null]}]},
             "preferredDate": {"dataType":"union","subSchemas":[{"dataType":"string"},{"dataType":"enum","enums":[null]}]},
-            "location": {"dataType":"string","required":true},
+            "location": {"dataType":"union","subSchemas":[{"dataType":"string"},{"dataType":"enum","enums":[null]}],"required":true},
             "status": {"dataType":"string","required":true},
             "createdAt": {"dataType":"datetime","required":true},
             "updatedAt": {"dataType":"datetime","required":true},
